syntax = "proto3";

package auth;

option java_package = "com.authservice.grpc";
option java_multiple_files = true;

service AuthService {
  rpc Register(RegisterRequest) returns (TokenResponse);
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidationResponse);
  rpc Logout(LogoutRequest) returns (EmptyResponse);
  rpc LogoutAll(LogoutAllRequest) returns (EmptyResponse);

  rpc AssignRole(AssignRoleRequest) returns (EmptyResponse);
  rpc RevokeRole(RevokeRoleRequest) returns (EmptyResponse);
  rpc GetUserRoles(GetUserRolesRequest) returns (UserRolesResponse);
  
  // User blocking
  rpc BlockUser(BlockUserRequest) returns (EmptyResponse);
  rpc UnblockUser(UnblockUserRequest) returns (EmptyResponse);
  
  // Statistics
  rpc GetActiveUsersCount(TimeRangeRequest) returns (CountResponse);
  rpc GetUsersActiveInLastMinutes(TimeWindowRequest) returns (UserIdsResponse);
  rpc GetAdminCount(GetAdminCountRequest) returns (CountResponse); // Added
  rpc GetBlockedUsersCount(GetBlockedUsersCountRequest) returns (CountResponse);

  // User deletion
  rpc DeleteUser(DeleteUserRequest) returns (EmptyResponse);

  // Password change
  rpc ChangePassword(ChangePasswordRequest) returns (EmptyResponse);
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message DeleteUserRequest {
  string user_id = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  optional string device_info = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutAllRequest {}

message AssignRoleRequest {
  string user_id = 1;
  string role_name = 2;
}

message RevokeRoleRequest {
  string user_id = 1;
  string role_name = 2;
}

message GetUserRolesRequest {
  string user_id = 1;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
  string user_id = 5;
  string email = 6;
  string name = 7;
  repeated string roles = 8;
}

message ValidationResponse {
  bool is_valid = 1;
  string user_id = 2;
  string email = 3;
  repeated string roles = 4;
  string error_message = 5;
}

message UserRolesResponse {
  repeated string roles = 1;
}

// User blocking messages
message BlockUserRequest {
  string user_id = 1;
  string reason = 2;
}

message UnblockUserRequest {
  string user_id = 1;
}

// Statistics messages
message TimeRangeRequest {
  int64 from_timestamp = 1;
  int64 to_timestamp = 2;
}

message TimeWindowRequest {
  int32 minutes = 1;
}

message CountResponse {
  int32 count = 1;
}

message UserIdsResponse {
  repeated string user_ids = 1;
}

message GetAdminCountRequest {}

message GetBlockedUsersCountRequest {}

message EmptyResponse {}
